styles/index.css
/* ... */
::-moz-focus-inner { /* Remove the inner border and padding of focus outlines in Firefox */
  padding:      0;
  border-style: none
}
:-moz-focusring
  /* Restore focus outline - https://github.com/necolas/normalize.css/issues/481 */
  { outline: 1px dotted ButtonText }

html {
  color: CanvasText;
  background-color: Canvas;
  color-scheme: light dark;
}
html:focus-within
  { scroll-behavior: smooth /* https://css-tricks.com/fixing-smooth-scrolling-with-find-on-page/ */ }

/* SCROLL SNAPPING
  - https://www.w3.org/TR/css-scroll-snap-1/
  - https://drafts.csswg.org/css-scroll-snap-1/
  - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Scroll_Snap/Basic_concepts
*/
body {
  /* scroll-snap-type: y mandatory */
}
body > nav, body > main, body > aside, body > footer {
  background: Canvas;
}
body > nav {
  box-shadow: var(--box-shadow);
  background: transparent;
}
body > main
  { scroll-snap-align: start }
body > aside
  { background: ButtonFace }
body > footer {
  color: Canvas;
  background: GrayText;
}

/*
  -   https://meowni.ca/hidden.is.a.lie.html
  - hidden - https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/hidden
  - https://css-tricks.com/comparing-various-ways-to-hide-things-in-css/
  - Invisible content - https://webaim.org/techniques/css/invisiblecontent/
  - until-found
    - https://css-tricks.com/newsletter/295-hidden-until-found/
    - https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/hidden#the_hidden_until_found_state
*/
template /* IE custom elements */
  { display: none }

[hidden], [aria-hidden=true], template {
  width: 1px;
  height: 1px;
  display: none;
  overflow: hidden;
   /* be careful..can be overridden */
  position: absolute;
  white-space: nowrap; /* https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe */
  pointer-events: none;
  clip-path: inset(50%);
}

header, h1, h2, h3, h4, h5, h6 {
  max-width: 45rem;
  padding: var(--margin-collapse-bugfix) var(--font-size);
}

iframe {
  width: 100%;
  border: none;
  background: canvas;
}
hr { /* https://www.lifewire.com/styling-horizontal-rule-tag-3466399 */
  border: 0;
  height: .15em;
  opacity: 0.25;
  max-width: 80vw;
  overflow: visible;
  box-sizing: content-box
}

mark {
  padding: 0.1618em;
  border-radius: 0.318em;
  box-shadow: var(--box-shadow);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/box-decoration-break */
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}

/*
  - https://stackoverflow.com/questions/5437674/what-unicode-characters-represent-time
*/
time, time::before, time::after {
}
time {
  padding: 0.618ch;
  white-space: nowrap;
  display: inline-block;
  font-size: var(--larger);
  padding: 0.618ch;
  background: purple;
}
time[title] {
  background: lime;
}
time[datetime] {
  background: orange;
}
time::before, time::after {
  background: pink;
  padding: 0.1682ch;
  margin-inline: 0.1682ch;
}
time::before {
  content: '⌚';
}
time::after{
  content: attr(datetime);
  padding-inline: 0.6182ch;
}
time[datetime]::before {
  content: '🗓';
}
time[datetime]::after {
  margin-inline-start: 1ch;
  box-shadow: 0 0 0.1ch 0.1682ch;
}
time:empty {
  background: yellow;
}
time:empty::before {
}


data, var {
  color: CanvasText;
  padding: 0.1618em;
  font-weight: bold;
  background: ButtonFace;
  margin-inline: 0.1618em;
}
data {}
var{}

pre, code, kbd, samp
  { border-radius: 0.618em }
pre code {
  display: inherit;
  border-radius: unset;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}


/* http://html5doctor.com/the-details-and-summary-elements/ */
details { }
summary {
  opacity: 0.75;
  list-style: none;
}
summary::before,
summary::after {
  content: 'foo';
  background: orange;
}

summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before
  { content: '>' }
main details[open] > summary::before
  { content: 'v' }


/* NAV */
nav {
  background: pink;
  margin: 0;
  /* padding: 0; */
}
nav > details > ul {
  margin: unset;
  width: inherit;
  display: list-item;
  position: relative;
}

nav > details > ul li li {
  list-style: '➱' inside;
}

nav > details > ul li li:hover {
  list-style-type: '➯';
}

nav details > summary {
  cursor: s-resize;
  list-style: '📁' inside;
}
nav details[open] > summary {
  cursor: n-resize;
  list-style: '📂';
}
nav > details > summary {
  right: 2ch;
  bottom: 2ch;
  width: 100%;
  width: 38%;
  opacity: 100%;
  position: fixed;
  display: block;
  display: list-item;
  position: absolute;
  background: canvas;
  /* box-shadow: var(--shadow); */
  text-align: var(--text-align);
  /* clip-path: inset(0px 244px 1px 170px); */
   /* https://www.htmlsymbols.xyz/unicode/U+2630 */
  clip-path: none;
}
nav > details > summary {
}
nav > details > summary::before,
nav > details > summary::after {
  content: '☰';
  padding: 1ch;
  left: -1ch;
  vertical-align: text-top;
  z-index: -1;
  background: inherit;
  display: inline-block;
  box-shadow: var(--shadow);
  font-size: calc(1em * var(--GOLDEN-RATIO));
  border: calc(0.1ch * var(--GOLDEN-RATIO)) solid;
}
nav > details > summary::before {
  position: relative;
}
nav > details > summary::after {
  /* list-style-type: unset; */
  /* position: fixed; */
  /* bottom: 1ch; */
  /* right: 1ch; */
}
nav > details[open] > summary {
  list-style-position: inside;
  list-style-type: 'ⓧ';
}
nav > details[open] > summary::before,
nav > details[open] > summary::after {
  content: 'ⓧ';
}
nav > details[open] > summary:hover::before,
nav > details[open] > summary:hover::after {
  /* https://www.htmlsymbols.xyz/unicode/U+2716 */
  content: '✖';
}
body > nav *::before, body > nav *::after {
  outline: 1ch solid lightgrey;
  outline-offset: 1ch;
  outline: 0;
  border: 1ch solid magenta;
  border-width: 1ch 0;
  text-align: center;
  display: inherit;
}
/* ... */

